# Discord-Bot

./: command.py  config.py  filas_salvas.json  main.py  permissions.py  pyproject.toml  security.py
language/: en_US.py  pt_BR.py
